--- a/style.css
+++ b/style.css
@@ -6,3 +6,33 @@ header{
     background-color: rgb(156, 153, 153);
     padding: 20px 0;
 }
+
+.caja{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
+}
+
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a{
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: #dc9913;
+    text-decoration: underline;
+}
